# tributech-oem-module-iot-kit-examples

./: .gitignore  README.md
IoT-KIT-Infineon-XMC47_RELAX_5V_AD_V1/: README.md
IoT-KIT-Infineon-XMC47_RELAX_5V_AD_V1/XMC4700_USB_to_UART/: .cproject  main.c
Tributech OEm Arduino shield and nRF52840 DK samples/: README.md
examble-nordic-nRF52840/: README.md
examble-nordic-nRF52840/DPS368_to_OEM/: CMakeLists.txt  prj.conf  sample.yaml
examble-nordic-nRF52840/DPS368_to_OEM/src/: main.c
examble-nordic-nRF52840/DPS368_to_OEM/src/Base64/: Base64.c
examble-nordic-nRF52840/DPS368_to_OEM/src/DPS368/: dps368.c
examble-nordic-nRF52840/DPS368_to_OEM/src/Functions/: functions.c  functions.h
examble-nordic-nRF52840/DPS368_to_OEM/src/ParsingAndSending/: parse_and_send.c  parse_and_send.h
examble-nordic-nRF52840/DPS368_to_OEM/src/Scheduling/: scheduling.c  scheduling.h
examble-nordic-nRF52840/DPS368_to_OEM/src/TributechLib/: tributech.c  tributech.h  tributech_oem_api.c
examble-nordic-nRF52840/DPS368_to_OEM/src/UartCommunication/: uart_communication.c  uart_communication.h
examble-nordic-nRF52840/USB_to_UART/: CMakeLists.txt  prj.conf
examble-nordic-nRF52840/USB_to_UART/src/: main.c
examble-nordic-nRF52840/USB_to_UART/src/LEDblink/: led_blink.c  led_blink.h
examble-nordic-nRF52840/USB_to_UART/src/UartCommunication/: uart_communication.c
example-arduino-unoR3/: README.md
example-arduino-unoR3/tributech_arduino_uno_example/: tributech_arduino_uno_example.ino  tributech_oem_api.c
example-infineon-xmc4700/: README.md  twin-template-QA-testing.json
example-infineon-xmc4700/project/: .cproject  .project  main.c  solver.bak
nRF52840-DK/: README.md
nRF52840-DK/DPS368_to_OEM/: CMakeLists.txt  app.overlay  prj.conf
nRF52840-DK/USB_to_UART/: app.overlay
(+184 files in other folders)
